# src/app/api/models.ts
@@ -1,3 +1,7 @@
+export { Categoria } from './models/categoria';
+export { Estado } from './models/estado';
+export { Localidad } from './models/localidad';
 export { Login } from './models/login';
+export { Producto } from './models/producto';
 export { Usuario } from './models/usuario';
 export { WeatherForecast } from './models/weather-forecast';
