# src/app/api/models/categoria.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Categoria {
+  id?: null | number;
+  nombre?: null | string;
+}
