# src/app/api/models/estado.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Estado {
+  id?: null | number;
+  nombre?: null | string;
+}
