# src/app/api/models/localidad.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Localidad {
+  id?: null | number;
+  nombre?: null | string;
+}
