# src/app/api/models/producto.ts
@@ -1,0 +1,14 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Producto {
+  fecha_ingreso?: null | string;
+  fk_id_categoria?: null | number;
+  fk_id_estado?: null | number;
+  fk_id_locacion?: null | number;
+  id?: null | number;
+  imagen?: null | string;
+  nombre?: null | string;
+  observaciones?: null | string;
+  precio_compra?: null | number;
+  precio_venta?: null | number;
+}
