# src/app/api/services.ts
@@ -1,2 +1,6 @@
 export { AuthService } from './services/auth.service';
+export { CategoriasService } from './services/categorias.service';
+export { EstadosService } from './services/estados.service';
+export { LocalidadesService } from './services/localidades.service';
+export { ProductosService } from './services/productos.service';
 export { WeatherForecastService } from './services/weather-forecast.service';
